--- a/report.tex
+++ b/report.tex
@@ -487,6 +487,8 @@
 
 	OpenJSCAD's language supports two syntaxes, one based on message passing (or method invoking) and one based on calling functions. Both of these syntaxes are already present in javascript. Many operations provided produce a new object and don't change their parameters. This allows us to follow a functional programming approach and since there are fewer side-effects to know about it is easier to understand a program written using them.
 
+	A problem that can arise while writing and testing jscad programs is that there is no help on getting the parameters for operations right. It will be frustrating to spend more time than acceptable trying to understand why a certain operation is not producing the desired result. This problem is even more relevant when most of the operations have multiple optional parameters and parameters that replace others. Currently the only help available is OpenJSCAD's documentation (a tour on its functionality), the online community around OpenJSCAD and, since javascript is the core of the language, javascript development tools.
+
 	Some functions in OpenJSCAD and their parameters.
 	function parameters result 
 	Each primitive has a lot of options on how to call it.
