OpenJSCAD v4:  - Added a compliment on using javascript to balance. Praised its functions being first class.

--- a/report.tex
+++ b/report.tex
@@ -491,6 +491,8 @@
 
 	A problem using function call syntax. It may not provide the flexibility needed for arranging the code in a easily readable manner. This is especially true if a simple text editor is used. While assigning intermediary results to variables can help ``unnesting'' but it is sometimes inconvenient. On top of this OpenJSCAD is mainly just javascript and so javascript's strange behavior about semicolon insertion is carried over. 
 
+	A good thing about being based on javascript is the possibility of using higher order functions for modeling tasks. Examples of this advantage can be found in \textbf{leitao abstract geometry n high order programming}.
+
 	Some functions in OpenJSCAD and their parameters.
 	function parameters result 
 	Each primitive has a lot of options on how to call it.
