Aspects of the solution v3:  - On "help, documentation or reaction". Refered Learnable Programming as a guide to what should be followed to achieve good help and reaction to the user.  - On "persistence of programs". Added that supporting versions reduces annoyances and enhances workflow.  - On "applying to external tools". Added that without it the system won't be used since it can't be connected with what the user already knows.

--- a/report.tex
+++ b/report.tex
@@ -547,7 +547,7 @@
 \subsection{Aspects of the solution}
 	One aspect that has to be set is what is the language used to make the programs. Associative vs imperative. With side-effects vs without side-effects.
 
-	Another aspect is the amount of help or documentation or reaction the system has to support the user while he is thinking about and making the program. In an ideal scenario he is capable of either doing both at the same time or being able to switch \emph{modes} quickly without losing context.
+	Another aspect is the amount of help or documentation or reaction the system has to support the user while he is thinking about and making the program. In an ideal scenario he is capable of either doing both at the same time or being able to switch \emph{modes} quickly without losing context. In the light of \cite{victor2012learnable}, the system should have good answers to the questions proposed on what is a good programming environment.
 
 	Another aspect is the implementation of primitives of the language like constructive solid geometry, lofts and sweeps. Many others are needed to make the system useful. Being useful is more important than the number of primitives implemented. This leads to other concern, these primitives have to have some correspondence to primitives available in other tools used in architecture.
 
@@ -555,9 +555,9 @@
 
 	Other aspect is how the system lets users document the programs they made. It is characteristic to forget how some part of the program works and so documentation is needed (or anything that is faster to understand than to interpret the program directly). The system could support having drawings juxtaposed to the program in addition to previews of results like those present in DesignScript Studio, Dynamo and Grasshopper.
 
-	Other aspect is the persistence of programs between usage sessions and in cases the system crashes. In case of persistence between sessions, the user can close the browser or the tab at any moment, it would be useful to keep record of the current program in some way. In case of persistence in case of crashes, if the user program itself crashed the page it should not be executed immediately to allow its retrieval or edition (as it could crash the page again).
+	Other aspect is the persistence of programs between usage sessions and in cases the system crashes. In case of persistence between sessions, the user can close the browser or the tab at any moment, it would be useful to keep record of the current program in some way. In case of persistence in case of crashes, if the user program itself crashed the page it should not be executed immediately to allow its retrieval or edition (as it could crash the page again). With persistence of programs also comes the need for holding versions of the same program. These become useful as the user makes changes and wants to look back in time for some reason. Maybe because he did not anticipate the need for something he deleted or maybe because he wants to see how his programs have progressed.
 
-	Other aspect is the way programs can be applied to other modeling applications used by architects. Rosetta uses the concept of selecting a backend, a specific interface to a modeling application. After selecting a backend for a modeling application, Rosetta connects to it and results of running the program are passed to the application. The system could connect to Rosetta which would then connect to the application. This approach requires the setup of a communication channel between the browser where the system is running and Rosetta. The system could alternatively use a language that Rosetta already supports. When the user wants to pass the result of the program to the application he only has to select the desired backend and run the program inside Rosetta.
+	Other aspect is the way programs can be applied to other modeling applications used by architects. Without a way to do this the system is rendered useless as it can hardly be integrated into the architect's normal process. Rosetta uses the concept of selecting a backend, a specific interface to a modeling application. After selecting a backend for a modeling application, Rosetta connects to it and results of running the program are passed to the application. The system could connect to Rosetta which would then connect to the application. This approach requires the setup of a communication channel between the browser where the system is running and Rosetta. The system could alternatively use a language that Rosetta already supports. When the user wants to pass the result of the program to the application he only has to select the desired backend and run the program inside Rosetta.
 
 	%It should enumerate the various aspects of concern to be considered while making the solution. It may as well provide some alternatives to some aspects that are already known. These alternatives can refer to products already available.
 
