Aspects of the solution v4:  - On "documenting user's programs". Added that we can also look at traditional languages and also at literate programming.

--- a/report.tex
+++ b/report.tex
@@ -553,7 +553,7 @@
 
 	For simplicity it is perhaps better to support only 3D modeling primitives as these can show immediate results for this thesis, e.g. energy consumption analysis is a concern in architecture but will not be immediately supported. Other modeling areas will be overlooked either because of the current lack of knowledge of the author and/or because of the added amount of effort to provide them.
 
-	Other aspect is how the system lets users document the programs they made. It is characteristic to forget how some part of the program works and so documentation is needed (or anything that is faster to understand than to interpret the program directly). The system could support having drawings juxtaposed to the program in addition to previews of results like those present in DesignScript Studio, Dynamo and Grasshopper.
+	Other aspect is how the system lets users document the programs they made. It is characteristic to forget how some part of the program works and so documentation is needed (or anything that is faster to understand than to interpret the program directly). The system could support having drawings juxtaposed to the program in addition to previews of results like those present in DesignScript Studio, Dynamo and Grasshopper. It will also be useful to look at how current programming languages are usually documented. Other source of inspiration to draw from is Donald Knuth's Literate Programming.
 
 	Other aspect is the persistence of programs between usage sessions and in cases the system crashes. In case of persistence between sessions, the user can close the browser or the tab at any moment, it would be useful to keep record of the current program in some way. In case of persistence in case of crashes, if the user program itself crashed the page it should not be executed immediately to allow its retrieval or edition (as it could crash the page again). With persistence of programs also comes the need for holding versions of the same program. These become useful as the user makes changes and wants to look back in time for some reason. Maybe because he did not anticipate the need for something he deleted or maybe because he wants to see how his programs have progressed.
 
