Evaluation v0:  - First thoughts on what the evaluation might be based on.

--- a/report.tex
+++ b/report.tex
@@ -564,6 +564,17 @@
 %----------------------------------------------------
 %NAVevaluation
 \section{Evaluation (1/2pgs)}
+	Evaluating such a user experience centered application cannot be done by using quantitative measures. Of course that measuring the performance of parts that were identified as critical to a pleasing experience is important but this is only useful when tuning the system. To properly evaluate the result we have to use qualitative measures.
+
+	One possible measure is the number of users the system ends up serving. This measure doesn't provide any insight into why the system is better than others. The number of users not only depends on the quality and usefulness of the system but also on how it is marketed. Thus, this measure doesn't seem to fit the scope of a master's thesis.
+
+	One quantitative measure that will probably be relevant is the time it takes to apply a users program to other software the user has access. Measuring performance while executing a program in ``help mode'', ``apply to other software mode''. These measures would then be compared with those from other software like Rosetta and Dynamo.
+
+	On the same line of performance, it will be interesting to test how system performance scales with progressively large programs. These tests will be done informally. If a stable system interface surfaces it might be possible to do the tests automatically.
+
+	It might be acceptable to present the results of the project followed by personal thoughts on what is bad, what is good and what can be done in the future. Hey! This is what a description of the solution is...
+
+	%Maybe this section should state how the overall project execution will be evaluated which of course includes how to evaluate what it will produce.
 
 %----------------------------------------------------
 %NAVconclusions
