--- a/report.tex
+++ b/report.tex
@@ -45,7 +45,6 @@
 %NAVintroduction
 \section{Introduction (2/3pgs)}
 	Programming is becoming an essential way of expressing ideas in a way a computer can understand them.
-
 	Once a computer can understand an idea (or process) it can apply it as many times as we want.
 
 	Expressing ideas/processes in a way a computer understands requires us to specify every detail of what we have in mind (sometimes too much) which forces us to really understand what it is.
@@ -53,12 +52,10 @@
 	Many people have understood the power that comes from having a computer (or machine) doing lots of mechanical work and so have adopted programming as a new tool.
 
 	Still, programming as it is normally present requires a lot of discipline on the part of the programmer to keep what he is expressing understandable.
-
 	To ease the task of programming right, programming languages such as Logo\cite{papert1999logo}, Scratch\cite{Resnick:2009:SP:1592761.1592779} and Smalltalk\cite{goldberg1983smalltalk} have been developed. 
 	Such languages provide environments with strong metaphors that guide the programmer as he learns and uses it to create increasingly complex programs (or express complex ideas).
 
 	Although the languages referred above provide great environments to think about what is being programmed, they are also often viewed as too restrictive and haven't spread enough to be considered useful (they are too restricted, seen has ``for children'', not useful and/or not known).
-
 	These languages restrict themselves to pedagogic concepts and lack functionality that is needed for real world application.
 
 	Whatever the reason for not being used, they have been replaced by other more well-known languages. 
@@ -69,22 +66,49 @@
 
 	Being aimed at beginners doesn't mean that those languages require no amount of training to be used. 
 	The basic concepts of those languages still have to be understood. 
+	Attending courses, reading books, using a programming environment are ways that help understanding those concepts.
 
 	Following the trend of using programming in their work, architects started using programming to generate the 3D models of the buildings they ``come up with''. 
 	They use a process called Generative Design\cite{terzidis2003expressive}\cite{Maeda:2001:DN:559503}.
-
 	Using Generative Design enables the designer to easily create variants of his design by changing a small set of parameters. 
 	Those parameters are used by the computer to run the algorithm, written by the designer, to generate an ``instance'' of his design. \cite{Santos20144} \textbf{Ref Sketchpad master drawings}
 
-	There are several environments/software packages that enable people to use Generative Design to make 3D models. 
-	First, after recognizing the advantages it brings to its users\footnote{Many architecture and design projects require a lot of repetition, the \emph{forte} of programming/machines.}, all major CAD softwares used by architects support Generative Design through dedicated programming environments. 
-	There are also standalone programming environments like Processing\cite{reas2007processing} or Rosetta\cite{de2012modern}; the first is a programming environment for the visual (or other) arts and the second is an environment specifically for Generative Design that aims to separate the design from the CAD its results are ``displayed'' in. 
-	As pure programming environments, these last two don't consider/provide direct manipulation as a primary tool in their approach.
+	As with other programming approaches, there are several environments that make it easier to program for Generative Design. 
+	\footnote{In case of Generative Design it is a necessity to have a dedicated programming environment as architects may not be willing to program if it is too hard, too unknown.
+	After all, their work is not developing software, they will only program if it is a easier alternative for designing a building.}
+	First, many CAD software packages used by architects have support for Generative Design provided by a plug-in or a set of plug-ins.
+	In these software packages Generative Design isn't the main way to model.
+	Second, there are standalone programming environments like Processing\cite{reas2007processing} or Rosetta\cite{de2012modern}; the first is a programming environment for the visual arts and the second is an environment thought specifically for Generative Design that aims to separate the design from the CAD its results are ``displayed'' in. 
+	As they come from textual programming community, these don't provide direct manipulation as a primary tool.
 
+	%Remove.
+	%Why move to the browser?
+	%cloud-storage, new market, bigger market, unified distribution, multiple integrated platforms (pcs, tablets, mobile phones), almost standard wide-spread user-interface platform (html-css-javascript)
+	More and more effort is being made to move applications to the cloud. 
+	As the number of people with access to the internet is rising so is the opportunity to explore new possibilities of using it. 
+	A benefit of being in the cloud is the higher number of computers that will have access to the application. 
+
+	%Remove.
 	Like online programming courses, programing environments for Generative Design can move to the web browser. 
 	Complementarily to not requiring installation, moving to the browser (or to a website) also makes programming environments available from anywhere a browser is found, be it a computer running Windows, Mac OS X or a Linux or even an Android tablet. 
 	They would require no installation, would be ubiquitous and would be OS independent; contrasting with major CADs, like AutoCAD\footnote{Currently AutoCAD has a full-featured version running on Windows and a less feature rich version running on Mac OS.}, that are tied to one OS or have serious drawbacks against using other OSs.
 
+	%Remove.
+	Online CAD applications are starting to appear. 
+	Applications like Clara.io, GooCreate and OpenJSCAD are some examples.
+	Each follow a different approach to modeling.
+	Clara.io focuses on creating 3d modeling and is primarily a direct manipulation environment.
+	GooCreate focuses on creating games. 
+	It also follows a direct manipulation approach but it doesn't focus on 3d modeling.
+	OpenJSCAD focuses on 3d modeling using programming.
+	It can run programs written using its programming language and can show their results in 3d.
+
+	Web browser applications with heavy use of 3d graphics are now becoming common.
+	There are 3d modeling applications, game editors and procedural 3d modeling applications.
+	\footnote{Some examples are Clara.io, a 3d modeling application, GooCreate, a game engine paired with a game editor and OpenJSCAD, a procedural 3d modeling language with a browser based program editor.}
+	While there are some applications where Generative Design can be applied there is still room for improving its support.
+
+	%Remove.
 	There aren't any known Generative Design environments that run in the web browser. 
 	This is in part because until now the browser didn't have the necessary technology to support performant 3D applications. 
 	This is not the case right now. 
