--- a/report.tex
+++ b/report.tex
@@ -44,6 +44,7 @@
 %----------------------------------------------------
 %NAVintroduction
 \section{Introduction (2/3pgs)}
+	%Introduce the power of programming.
 	Programming is becoming an essential way of expressing ideas in a way a computer can understand them.
 	Once a computer can understand an idea (or process) it can apply it as many times as we want.
 
@@ -51,68 +52,107 @@
 
 	Many people have understood the power that comes from having a computer (or machine) doing lots of mechanical work and so have adopted programming as a new tool.
 
-	Still, programming as it is normally present requires a lot of discipline on the part of the programmer to keep what he is expressing understandable.
-	To ease the task of programming right, programming languages such as Logo\cite{papert1999logo}, Scratch\cite{Resnick:2009:SP:1592761.1592779} and Smalltalk\cite{goldberg1983smalltalk} have been developed. 
-	Such languages provide environments with strong metaphors that guide the programmer as he learns and uses it to create increasingly complex programs (or express complex ideas).
+	%Introduce the need for IDEs. Introduce the demand for IDEs.
+	Still, programming requires a lot of discipline from the programmer.
+	The program has to be written using a programming language.
+	It might have to be stored following a specific file structure.
+	If a specific API is used a lot of documentation may have to be read to understand it.
+	The program may have to be compiled and only then run.
+	The compiler might detect syntactical errors that have to be corrected.
+	If there is a bug, a debugging session has to be started to find the bug.
+	When the bug is found the corresponding part of program has to corrected.
+	And so on and so forth.
 
-	Although the languages referred above provide great environments to think about what is being programmed, they are also often viewed as too restrictive and haven't spread enough to be considered useful (they are too restricted, seen has ``for children'', not useful and/or not known).
-	These languages restrict themselves to pedagogic concepts and lack functionality that is needed for real world application.
+	All of this demands great time and effort from the programmer.
+	All those small steps have to be learned.
+	All those small steps have to be articulated by the programmer.
+	It is an inevitably complex activity.
+	And the programmer's productivity and enjoyment suffers from it.
+	There has to be some way of lifting some of the work from the programmer.
+	That is where integrated programming environments come in.
 
-	Whatever the reason for not being used, they have been replaced by other more well-known languages. 
-	Some of those languages are Lua, Python and Javascript \textbf{REFs?}. 
-	These three are all dynamic languages and were designed to be easy to understand and to use by people with little programming knowledge. 
-	They are dynamic (checked on runtime, change on runtime, ...), have loose syntax and have loose typing. 
-	They are ``more forgiving''.
+	Integrated programming environments bring together all the tools needed while programming and automates all its small steps.
+	They might do it so well that the programmer might forget that those steps still exist.
+	We can imagine that novice programmers using these environments would simply be unaware of them.
+	Programmers still have to write, run and debug their programs but they do so without losing time performing all those little steps.
+	And so integrated programming environments have become essential everywhere there is programming.
+	
+	%Go from software production IDEs to architecture specific IDEs.
+	%Software development -> dynamic languages -> domain specific -> architecture specific
+	There are IDEs dedicated to supporting software production, like Eclipse and Visual Studio.
+	These IDEs support many programming languages and provide many tools needed for software production.
+	They help programmers navigate big software projects and let them configure complex building processes.
+	They also help them organizing the work on their software projects.
+	They are good for large scale software projects but not as good for small projects such as prototypes and ``gluing programs together''.
+	They still require a lot of configuration before the programmer can start using them to make a program.
+	Again, a programmer is being burdened with small steps that could be automated.
+	This is where dynamic languages and their integrated programming environments can be useful.
 
-	Being aimed at beginners doesn't mean that those languages require no amount of training to be used. 
-	The basic concepts of those languages still have to be understood. 
-	Attending courses, reading books, using a programming environment are ways that help understanding those concepts.
+	%IDEs dynamic languages.
+	Integrated programming environments for dynamic programming languages can go a step further in shortening the cycle between editing the program and seeing its effects.
+	They allow programmer to quickly run their programs and provide ways to interact with them like REPLs.
+	The programmer can now write his program and then start experimenting with it in the REPL, quickly testing some areas or quickly sketching new portions of the program.
+	All this without having to write a separate program and compiling both.
+	Dynamic languages also play a part.
+	They start to blur the line between programming language and programming environment.
+	Being less strict and providing higher level concepts allows them to free programmers from having the state every detail of the program.
+	They allow the missing details to be implicit.
 
+	%IDEs domain specific.
+	Integrated programming environments for dynamic languages are better but they are still too general purpose.
+	They stop at helping to program without covering problems specific to the bigger activities of their users.
+	They don't automate the small repetitive steps present in activities where programming is used as a tool.
+	Integrated programming environments like IPython and Impromptu are another step further.
+	IPython helps scientists.
+	Scientists can use IPython to program to get what matters to them, automating gathering of data, transforming and visualizing it in order to draw conclusions.
+	It integrates taking notes and programming.
+	They no longer have to join the pieces of information into a single space, it is already done by the environment.
+	Impromptu helps musicians.
+	Musicians can use Impromptu to compose music procedurally.
+	A musician using Impromptu doesn't have generate a MP3 file and then play it to actually hear what his program produced.
+	He just starts his program and hears it.
+
+	Here programming is no longer the main activity, it is used as a way to make computers do something we want.
+	The results and ways to visualize (or hear) the results are integrated into the environment.
+
+	%IDEs architecture specific.
+	As with scientists and musicians, architects can benefit from having integrated programming environments specific to their programming needs.
+	They too can benefit from automating small steps and integrating all tools needed to making their programs.
+	In their case there needs to be a direct correspondence between the program and the 3D geometry that it creates.
+	
 	Following the trend of using programming in their work, architects started using programming to generate the 3D models of the buildings they ``come up with''. 
 	They use a process called Generative Design\cite{terzidis2003expressive}\cite{Maeda:2001:DN:559503}.
-	Using Generative Design enables the designer to easily create variants of his design by changing a small set of parameters. 
-	Those parameters are used by the computer to run the algorithm, written by the designer, to generate an ``instance'' of his design. \cite{Santos20144} \textbf{Ref Sketchpad master drawings}
+	Using Generative Design enables them to easily create variants of their designs by changing a small sets of parameters. 
+	Those parameters are used by the computer to run the algorithm to generate an ``instance'' of their designs. \cite{Santos20144}
 
-	As with other programming approaches, there are several environments that make it easier to program for Generative Design. 
-	\footnote{In case of Generative Design it is a necessity to have a dedicated programming environment as architects may not be willing to program if it is too hard, too unknown.
-	After all, their work is not developing software, they will only program if it is a easier alternative for designing a building.}
+	There are several integrated programming environments that make it easier to program for Generative Design. 
+	%\footnote{In case of Generative Design it is a necessity to have a dedicated programming environment as architects may not be willing to program if it is too hard, too unknown.
+	%After all, their work is not developing software, they will only program if it is a easier alternative for designing a building.}
 	First, many CAD software packages used by architects have support for Generative Design provided by a plug-in or a set of plug-ins.
 	In these software packages Generative Design isn't the main way to model.
 	Second, there are standalone programming environments like Processing\cite{reas2007processing} or Rosetta\cite{de2012modern}; the first is a programming environment for the visual arts and the second is an environment thought specifically for Generative Design that aims to separate the design from the CAD its results are ``displayed'' in. 
 	As they come from textual programming community, these don't provide direct manipulation as a primary tool.
 
-	%Remove.
-	%Why move to the browser?
-	%cloud-storage, new market, bigger market, unified distribution, multiple integrated platforms (pcs, tablets, mobile phones), almost standard wide-spread user-interface platform (html-css-javascript)
-	More and more effort is being made to move applications to the cloud. 
-	As the number of people with access to the internet is rising so is the opportunity to explore new possibilities of using it. 
-	A benefit of being in the cloud is the higher number of computers that will have access to the application. 
+	Although these integrated programming environments already enable architects to do Generative Design there is still room for improvement.
+	They present some work on freeing architects from being stuck with one of the well established CAD software packages or one of their plug-ins.
+	It is still possible to try to free them even further, they can be freed from the computer that runs their programs.
 
-	%Remove.
-	Like online programming courses, programing environments for Generative Design can move to the web browser. 
-	Complementarily to not requiring installation, moving to the browser (or to a website) also makes programming environments available from anywhere a browser is found, be it a computer running Windows, Mac OS X or a Linux or even an Android tablet. 
-	They would require no installation, would be ubiquitous and would be OS independent; contrasting with major CADs, like AutoCAD\footnote{Currently AutoCAD has a full-featured version running on Windows and a less feature rich version running on Mac OS.}, that are tied to one OS or have serious drawbacks against using other OSs.
+	One possibility for freeing them the computer that run their programs is moving the environment to the cloud and the web browser.
 
-	%Remove.
-	Online CAD applications are starting to appear. 
-	Applications like Clara.io, GooCreate and OpenJSCAD are some examples.
-	Each follow a different approach to modeling.
-	Clara.io focuses on creating 3d modeling and is primarily a direct manipulation environment.
-	GooCreate focuses on creating games. 
-	It also follows a direct manipulation approach but it doesn't focus on 3d modeling.
-	OpenJSCAD focuses on 3d modeling using programming.
-	It can run programs written using its programming language and can show their results in 3d.
+	%Architects also need to be independent from the CADs they are using.
+	%It is often the case that they become experts in just one software.
+	%They also become very dependent on that software.
 
-	Web browser applications with heavy use of 3d graphics are now becoming common.
-	There are 3d modeling applications, game editors and procedural 3d modeling applications.
-	\footnote{Some examples are Clara.io, a 3d modeling application, GooCreate, a game engine paired with a game editor and OpenJSCAD, a procedural 3d modeling language with a browser based program editor.}
-	While there are some applications where Generative Design can be applied there is still room for improving its support.
+	Web browser applications with heavy use of 3D graphics are now becoming common.
+	There are 3D modeling applications, game editors and procedural 3D modeling applications.
+	\footnote{Some examples are Clara.io, a 3D modeling application, GooCreate, a game engine paired with a game editor and OpenJSCAD, a procedural 3D modeling language with a browser based program editor.}
+	These applications tend to be more independent from the details of the machine where they are running.
+	They all share the same platform, the web browser.
 
-	%Remove.
-	There aren't any known Generative Design environments that run in the web browser. 
-	This is in part because until now the browser didn't have the necessary technology to support performant 3D applications. 
-	This is not the case right now. 
-	Clara.io\cite{Houston:2013:CFC:2503673.2503681}, an online 3D modeler (like 3ds Max) and \textbf{*insert js webapp here*} show that it is possible to build web browser based applications that are on pair with their desktop analogs. 
+	While there are some web browser applications where Generative Design can be applied there is still room for improving its support.
+	As an example, OpenJSCAD lets programmers write and run programs that generate 3D objects and displays its results in an interactive 3D view.
+	It doesn't provide constant feedback to changes when writing the program.
+	The only way the programmer has to get feedback from the program is by explicitly running it.
 
 	We propose a web browser based Generative Design environment. 
 	Such environment will allow architects, or anyone interested in Generative Design, to edit Generative Design programs and visualize their results while not requiring any installation. 
