Report: - Typo corrections.

--- a/report.tex
+++ b/report.tex
@@ -137,7 +137,7 @@
 	They present some work on freeing architects from being stuck with one of the well established CAD software packages or one of their plug-ins.
 	It is still possible to try to free them even further, they can be freed from the computer that runs their programs.
 
-	One possibility for freeing them the computer that run their programs is moving the environment to the cloud and the web browser.
+	One possibility for freeing them from the computer that runs their programs is moving the environment to the cloud and the web browser.
 
 	%Architects also need to be independent from the CADs they are using.
 	%It is often the case that they become experts in just one software.
@@ -145,7 +145,7 @@
 
 	Web browser applications with heavy use of 3D graphics are now becoming common.
 	There are 3D modeling applications, game editors and procedural 3D modeling applications.
-	\footnote{Some examples are Clara.io, a 3D modeling application, GooCreate, a game engine paired with a game editor and OpenJSCAD, a procedural 3D modeling language with a browser based program editor.}
+	\footnote{Some examples are Clara.io, a 3D modeling application, GooCreate, a game engine paired with a game editor, and OpenJSCAD, a procedural 3D modeling language with a browser based program editor.}
 	These applications tend to be more independent from the details of the machine where they are running.
 	They all share the same platform, the web browser.
 
